--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  sqflite: ^1.1.6+1
+  path_provider: ^1.1.2
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
