--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
   sqflite: ^1.1.6+1
   path_provider: ^1.1.2
   intl: ^0.15.8
+  http: ^0.12.0+2
+  provider: ^3.0.0+1
+  firebase_auth: ^0.11.1+11
+  firebase_core: ^0.4.0+6
+  firebase_database: ^3.0.4
 
 dev_dependencies:
   flutter_test:
