--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,16 @@ dependencies:
   firebase_auth: ^0.11.1+11
   firebase_core: ^0.4.0+6
   firebase_database: ^3.0.4
+  flutter_launcher_icons: ^0.7.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/dypiu.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
