--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^0.4.0+6
   firebase_database: ^3.0.4
   flutter_launcher_icons: ^0.7.3
+  flutter_screenutil: ^0.5.3
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +43,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icon/dypiu.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
