--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   firebase_database: ^3.0.4
   flutter_launcher_icons: ^0.7.3
   flutter_screenutil: ^0.6.0
+  shared_preferences: 0.5.3+4
+  day_night_switch: 0.0.2+1
+
 
 dev_dependencies:
   flutter_test:
